tera/src/snapshot_tests/snapshots/tera__snapshot_tests__parser__parser_errors@duplicate_block.txt.snap
---
source: tera/src/snapshot_tests/parser.rs
expression: res.unwrap_err()
input_file: tera/src/snapshot_tests/parser_inputs/errors/duplicate_block.txt
---
error: Template already contains a block named `hello`
 --> duplicate_block.txt:2:10
  |
2 | {% block hello %}{% endblock %}
  |          ^^^^^
